--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-background-color: #59226b;
+background-color: #2c062b;
 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 line-height: 1.5;
 font-size: 1em;
@@ -24,4 +24,99 @@ p{
 
 body{
   color:#fff;
+  background-image: url('chakra stones.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  }
+
+.summary{
+  text-align: center;
+  display: inline-block;
+  float: center;
+  width: 1460px;
+  height: 75px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #000000;
+  opacity: 70%;
+}
+
+.preamble{
+  text-align: center;
+  display: inline-block;
+  float: center;
+  width: 1460px;
+  height: 200px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #000000;
+  opacity: 70%;
+}
+
+.explanation{
+  text-align: center;
+  display: inline-block;
+  float: center;
+  width: 1460px;
+  height: 180px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #000000;
+  opacity: 70%;
+}
+
+.participation{
+  text-align: center;
+  display: inline-block;
+  float: center;
+  width: 1460px;
+  height: 230px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #000000;
+  opacity: 70%;
+}
+
+.benefits{
+  text-align: center;
+  display: inline-block;
+  float: center;
+  width: 1460px;
+  height: 160px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #000000;
+  opacity: 70%;
+}
+
+.requirements{
+  text-align: center;
+  display: inline-block;
+  float: center;
+  width: 1460px;
+  height: 360px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #000000;
+  opacity: 70%;
+}
+
+footer{
+  font-size: 30px;
+  display: block;
+  padding: 8px;
+  word-spacing: 20px;
+  text-align: center;
+}
+
+#design-selection, #design-archives, #zen-resources{
+  display: inline-block;
+  float: left;
+  width: 455px;
+  height: 250px;
+  padding: 20px;
+  border: 2px solid #802147;
+  background: #eea683;
+  opacity: 70%;
 }
